# RTuneSC20

./: README.md
applications/: README.md
environment/: fornax.txt  pascal.txt
objective1/LULESH/: lulesh-util.cc  lulesh.cc  lulesh.h  lulesh2_0_MPI_cfg_27_1_batch_run.sh  lulesh2_0_MPI_cfg_8_1_batch_run.sh  lulesh_w.cc
objective2/jacobi/: Makefile  jacobi.c  jacobi_abs.c  jacobi_mpi.c
objective3/LULESH/: Makefile  Makefile-clean  Makefile-rtune  batch_run.sh  lulesh-util.cc
objective3/jacobi/: Makefile  batch_run.sh  jacobi-clean.c  jacobi-rtune.c  rtune_batch_run.sh  rtune_jacobi_config.txt
objective3/rtune/: measurement.c  measurement.h  rtune.h  rtune_config.h.cmake  rtune_lexgion_config_example.txt  rtune_runtime.h
usecase1/LULESH/: lulesh-init.cc  lulesh.cc  lulesh2_0_MPI_cfg_27_36_batch_run.sh  lulesh2_0_MPI_cfg_8_36_batch_run.sh  lulesh2_0_cutoff_cfg_batch_run.sh
usecase2/jacobi/: Makefile  README.md  jacobi_mpi.c
usecase3/LULESH/: Makefile-rtune  clean_batch_run.sh  lulesh-clean.cc  lulesh-init.cc  lulesh-rtune.cc  lulesh.h  rtune_LULESH_config.txt  rtune_batch_run.sh
usecase3/LULESH-ActiveHarmony/: Makefile  README.md  lulesh-ah-run.sh  lulesh.cc
usecase3/jacobi/: Makefile  jacobi-clean.txt  rtune_batch_run.sh  rtune_batch_run.txt
usecase3/jacobi-ActiveHarmony/: Makefile  README.md  jacobi-ah-run.sh  jacobi-ah.c
usecase3/rtune/: CMakeLists.txt  rtune_runtime.c
usecase4/2Dstencil/: 32_512_random.output  Makefile  README.md  stencil_metadirective_online.c  stencil_simplified.c  test_random_size.sh
usecase4/AMR_stencil/: 32_512_random.output  Makefile  README.md  amr_stencil_rtune.c  test_random_size.sh
